--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
     package="com.example.shoppinglist">
 
     <application
+        android:name=".presentation.app.ShoppingListApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".presentation.app.ShoppingListApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList"
@@ -17,8 +17,11 @@
         <activity
             android:name=".presentation.ShopItemActivity"
             android:exported="false" />
+        <activity android:name=".presentation.MainActivity"
+            android:exported="false"/>
+
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +29,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".data.ShopListProvider"
+            android:authorities="com.example.shoppinglist"
+            android:exported="true" />
     </application>
 
 </manifest>
